# HydraSlicer

./: CMakeLists.txt  README.hydra.md  README.md
.github/workflows/: upstream-sync.yml
docs/design/: multi-printer-slicing.md
src/: CMakeLists.txt
src/hydra/: CMakeLists.txt  HydraGitSync.cpp  HydraGitSync.hpp  HydraLocalStore.cpp  HydraLocalStore.hpp  HydraMoonrakerClient.cpp  HydraMoonrakerClient.hpp  HydraPlatePlan.cpp  HydraPlatePlan.hpp  HydraPresetBundle.cpp  HydraPresetBundle.hpp  HydraSettings.cpp  HydraSettings.hpp  HydraSyncManager.cpp  HydraSyncManager.hpp
src/libslic3r/: AppConfig.hpp
src/libslic3r/Format/: bbs_3mf.cpp  bbs_3mf.hpp
src/slic3r/: CMakeLists.txt
src/slic3r/GUI/: BackgroundSlicingProcess.hpp  GUI_App.cpp  GUI_App.hpp  HydraLoginDialog.cpp  HydraLoginDialog.hpp  MainFrame.cpp  MainFrame.hpp  ParallelSlicingProcess.cpp  ParallelSlicingProcess.hpp  PartPlate.cpp  PartPlate.hpp  PlateSettingsDialog.cpp  PlateSettingsDialog.hpp  Plater.cpp  Tab.cpp
src/slic3r/Utils/: SupabaseAuth.cpp  SupabaseAuth.hpp
